pfish       2005/11/07 06:50:31 UTC	(20051107-3621)
  Log:
  PostgreSQL: Wallops if we can't db_connect and we're connected so we don't fail silently.
  

  Changes:	Modified:
  +1 -0		trunk/backend/postgresql.c (File Modified) 


pfish       2005/11/07 06:45:30 UTC	(20051107-3619)
  Log:
  Fix postgresql support.
  

  Changes:	Modified:
  +7 -5		trunk/backend/postgresql.c (File Modified) 


nenolod     2005/11/07 01:30:17 UTC	(20051107-3617)
  Log:
  Fix another issue here.
  

  Changes:	Modified:
  +2 -2		trunk/src/node.c (File Modified) 


nenolod     2005/11/07 01:27:16 UTC	(20051107-3615)
  Log:
  Whoops.

  Changes:	Modified:
  +3 -3		trunk/src/node.c (File Modified) 


nenolod     2005/11/07 01:24:50 UTC	(20051107-3613)
  Log:
  We should use LIST_FOREACH_SAFE here, as we're getting fucked up dereferences and whatnot. Whoever wrote this code must have been stoned.
  

  Changes:	Modified:
  +2 -2		trunk/src/node.c (File Modified) 


alambert    2005/11/07 01:15:30 UTC	(20051107-3611)
  Log:
  expire_check(): we don't want to return here...

  Changes:	Modified:
  +0 -2		trunk/src/node.c (File Modified) 


jilles      2005/11/07 00:04:17 UTC	(20051107-3609)
  Log:
  Change database errors from LG_DEBUG to LG_ERROR.
  

  Changes:	Modified:
  +8 -8		trunk/backend/mysql.c (File Modified) 
  +5 -5		trunk/backend/postgresql.c (File Modified) 


jilles      2005/11/06 23:57:17 UTC	(20051106-3607)
  Log:
  Enable $Id$ expansion.
  

  Changes:	Modified:
  + -		trunk/Makefile.win32  (Property Modified)
  + -		trunk/autoconf/atheme-c.m4  (Property Modified)
  + -		trunk/crypto/posix.c  (Property Modified)
  + -		trunk/dbtool/dbtool.c  (Property Modified)
  + -		trunk/include/xmlrpc.h  (Property Modified)
  + -		trunk/libatheme/event.h  (Property Modified)
  + -		trunk/libatheme/org.atheme.claro.base.string  (Property Modified)
  + -		trunk/libatheme/win32.c  (Property Modified)
  + -		trunk/modules/operserv/modinspect.c  (Property Modified)