@@ -1,3 +1,13 @@
+pfish       2005/11/07 07:01:03 UTC	(20051107-3623)
+  Log:
+  Add xmlrpc/channel to example configs
+  
+
+  Changes:	Modified:
+  +2 -0		trunk/dist/example.conf (File Modified) 
+  +2 -0		trunk/dist/example.userserv.conf (File Modified) 
+
+
 pfish       2005/11/07 06:50:31 UTC	(20051107-3621)
   Log:
   PostgreSQL: Wallops if we can't db_connect and we're connected so we don't fail silently.
